# nym-mailer

./: Cargo.toml  README.md
mailer-client/: Cargo.toml
mailer-client/src/: main.rs
mailer-common/: Cargo.toml
mailer-common/src/: lib.rs
mailer-server/: Cargo.toml  example.env
mailer-server/src/: main.rs  sendgrid.rs
src/: main.rs  sendgrid.rs
