[package]
name = "mailer-server"
version = "0.1.0"
edition = "2021"

[dependencies]
nym-sdk = { git = "https://github.com/nymtech/nym" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
mailer-common = {path = "../mailer-common"}
serde_json = "1.0"
reqwest = "0.11.17"
dotenv = "0.15.0"
